search: Fix bug where icon wasn't displaying on narrow screens.

--- a/web/styles/search.css
+++ b/web/styles/search.css
@@ -232,7 +232,7 @@
         }
 
         &:not(.focused) {
-            max-height: var(--search-box-height);
+            height: var(--search-box-height);
             overflow: hidden;
 
             .search-input-and-pills {
